# RBC-soccer-2025

./: .gitignore  .gitmodules  Cargo.toml  PRINCIPLES.md  README.md  RESOURCES.md  TODO.md  botbywire@192.168.137.239  ideas.md
cv-test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_speed  test_speed.cpp  undistort  undistort.cpp
random-rust-test/: Cargo.toml  main.rs
software/: CMakeLists.txt  PRINCIPLES.md  README.md  STRUCTURE.md  TODO.md  compile_commands.json
software/IR-test/: PlatformIO Project.code-workspace  platformio.ini
software/IR-test/src/: main.cpp  main.hpp
software/bottom/: .clangd  .clangd-template  .gitignore  CMakeLists.txt  CMakePresets.json  compile_commands.json
software/bottom-firmware/: CMakeLists.txt
software/bottom-firmware/tests/: CMakeLists.txt
software/bottom-firmware/tests/motor-driver/: CMakeLists.txt
software/bottom-new/: .gitignore  README.md
software/bottom-new/configs/include/: config.hpp
software/bottom-new/libs/comms/: CMakeLists.txt  debug.cpp  usb_descriptors.c
software/bottom-new/libs/mouse-sensor/: CMakeLists.txt  PMW3360.cpp  dbg_pins.cpp
software/bottom-new/libs/pins/: ADS1115.cpp
software/bottom-new/libs/utils/: CMakeLists.txt
software/bottom-new/src/: CMakeLists.txt
software/bottom-new/test/motor-driver-only-1/: main.cpp
software/bottom-new/test/mouse-sensor/: CMakeLists.txt  main.cpp
software/bottom-plate-esp32/: .ccls  compile_commands.json  extra_script.py  platformio.ini
software/bottom-plate-esp32/lib/PMW3360/: .piopm  PMW3360.hpp
software/bottom-plate-esp32/lib/utils/: debug.cpp  debug.hpp
software/bottom-plate-esp32/src/: main.cpp
software/bottom/configs/include/: FreeRTOSConfig.h  config.hpp  tusb_config.h
software/bottom/libs/: CMakeLists.txt
software/bottom/libs/DRV8244/: DRV8244.cpp  display.hpp
software/bottom/libs/MCP23S17/: MCP23S17.cpp  MCP23S17.hpp
software/bottom/libs/PMW3360/: PMW3360_tracking_srom.hpp
software/bottom/libs/comms/: CMakeLists.txt  comms.cpp  comms.hpp  debug.cpp  default_usb_config.h  errors.hpp  identifiers.hpp  usb.cpp  usb.hpp  usb_callbacks.cpp  usb_descriptors.c
software/bottom/libs/digital-mux/: CMakeLists.txt  MCP23S17.hpp  pinmap.hpp  pins.cpp  pins.hpp
software/bottom/libs/hardware-descriptors/: CMakeLists.txt  pinmap.hpp
software/bottom/libs/line-sensor/: ALS-PT19.hpp  ALSPT19.cpp  ALSPT19.hpp  CMakeLists.txt
software/bottom/libs/motor-driver/: CMakeLists.txt  DRV8244.cpp  DRV8244.hpp  errors.cpp  errors.hpp  pins.cpp  pins.hpp  ref.cpp  registers.cpp  registers.hpp
software/bottom/libs/motors/: CMakeLists.txt  (+15 more)
software/bottom/motor-driver/: CMakeLists.txt  compile_commands.json  platformio.ini
software/bottom/mouse-sensor/: CMakeLists.txt
software/bottom/pico/: CMakeLists.txt  main.c
software/bottom/src/: CMakeLists.txt  main.c  main.cpp
software/bottom/test/: CMakeLists.txt
software/ch201-test/: compile_commands.json  platformio.ini
software/ch201-test/src/: main.cpp  target_detection.cpp
software/middle/: CMakeLists.txt
software/middle-plate-rpi/: CMakeLists.txt
software/middle/goalpost_detection/: callibration.py  goalpost_detection.py  utils.py
software/middle/libs/: CMakeLists.txt
software/middle/pico/: CMakeLists.txt
software/middle/src/: CMakeLists.txt  main.cpp
software/middle/test/: CMakeLists.txt
software/motor-driver-test/: platformio.ini
software/motor-driver-test/src/: main.cpp  main.cpp a
software/mouse-sensor/src/: main.cpp
software/pico-sdk/: Makefile  cmake_install.cmake
software/pico-sdk/docs/: Makefile  cmake_install.cmake
software/pico-sdk/src/: Makefile  cmake_install.cmake
software/pico-sdk/tools/: Makefile  cmake_install.cmake
software/picosdk-test/: CMakeLists.txt  blink.c  compile_commands.json
software/rpi/: .clang-format  .gitignore  CMakeLists.txt  PI.cmake  README.md  points_data.csv
software/rpi-direct/: .gitignore  CMakeLists.txt  README.md  test.py
software/rpi-direct/libs/: CMakeLists.txt
software/rpi-direct/scripts/: extended_video_feed.py  shrink_direct.py  unwrap.py  unwrap_shrink.py  video_feed.py  video_record.py
software/rpi-direct/src/: CMakeLists.txt  main.cpp  mode_controller.cpp  mode_controller.hpp
software/rpi-direct/tests/: CMakeLists.txt
software/rpi-latency-test/pi/: main.cpp  test.cpp  test.py  test2.cpp  test2.py  test3.cpp
software/rpi-latency-test/pico/: compile_commands.json  platformio.ini
software/rpi-new/: .gitignore  CMakeLists.txt  README.md  compile_commands.json
software/rpi-new/cmake/: Common-RPi-Toolchain.cmake
software/rpi-new/docker-arm-cross-build-scripts/: build.sh
software/rpi-new/src/: CMakeLists.txt  mode_controller.cpp  mode_controller.hpp
software/rpi-new/tests/: CMakeLists.txt
software/rpi/libs/: CMakeLists.txt
software/rpi/src/: CMakeLists.txt  main.cpp  mode_controller.cpp  mode_controller.hpp
software/rpi/test/: CMakeLists.txt
software/rpi/tests/: CMakeLists.txt
software/scripts/: run.py  run_executable_on_toggle.py
software/sim/: Cargo.toml  config_template.json  data.rs  simulate.rs  take_view.rs  thing.cpp
software/src/input/: input.hpp  main.cpp
software/src/main/: input_state.cpp  input_state.hpp  loop.cpp  main.cpp  main.hpp  output_state.cpp  output_state.hpp
software/src/output/: main.cpp
software/src/strategy/: main.cpp  main.hpp
software/test/: Makefile  cmake_install.cmake
software/test/motor-driver/: Makefile  cmake_install.cmake
software/test/mouse-sensor/: Makefile  cmake_install.cmake
software/top/: .gitignore  CMakeLists.txt  README.md  compile_commands.json
software/top/configs/: CMakeLists.txt  config.cpp
software/top/libs/: CMakeLists.txt
software/top/pico/: CMakeLists.txt
software/top/src/: CMakeLists.txt  main.cpp
software/top/test/: CMakeLists.txt
software/ultrasonic.mofmofdetection/source/: MCP23S17.cpp  compile_commands.json
software/usb-cdc-test/: CMakeLists.txt  main.c  reset_interface.c  stdio_config.h  tusb_config.h  usb_callbacks.c  usb_descriptors.c
software/utils/: vector.cpp  vector.hpp
(+785 files in other folders)
