[package]
name = "random-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.14.0"
serde = "1.0.197"
serde_json = "1.0"
rapier3d = { version = "*", features = [ "simd-stable" ] }

[[bin]]
name = "random-test"
path = "main.rs"
